welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:22: error: type mismatch;
 found   : Int
 required: Boolean
  return o
         ^