welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var n = nums.length
  var o = 0
  if (n<=4)
  {
    for (i <- 0 to n)
    {
      if (nums(i)==9)
      {
        o=o+1
      }
    }
  }else
  {
    for (i <- 0 to 3){
      if (nums(i)==9)
      {
        o=o+1
      }
    }
  }
  return o
}